ingress/networkPolicy1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy1
  namespace: default
spec:
    podSelector:
        matchLabels:
        app: echo
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                app: curl
        ports:
            - protocol: TCP
            port: 8080
